// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-routes build and serve should generate the expected files 1`] = `
{
  "382-64dbd029f1469d363a43.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent-c7814faa29177a38db1e.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-b25ca7bb5bb8893dbc88.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-c356fae1fa4d368326f6.css": ._itmq_4 {
  color: blue;
}
,
  "handlers-Home-0ccb652c496afedfb250.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-b6a3922b82ffa6cd563b.css": .QyseV26 {
  color: red;
}
,
  "main-cc506eaa517ad60709e3.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-fe96cb8c821cfb411cf6.js",
    "/static/place/382-64dbd029f1469d363a43.js",
    "/static/place/main-cc506eaa517ad60709e3.js",
    "/static/place/handlers-Details-b25ca7bb5bb8893dbc88.js",
    "/static/place/AsyncComponent-c7814faa29177a38db1e.js",
  ]
CSS: [
    "/static/place/handlers-Details-c356fae1fa4d368326f6.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_itmq_4">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [247,100]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-fe96cb8c821cfb411cf6.js",
    "/static/place/382-64dbd029f1469d363a43.js",
    "/static/place/main-cc506eaa517ad60709e3.js",
    "/static/place/handlers-Home-0ccb652c496afedfb250.js",
  ]
CSS: [
    "/static/place/handlers-Home-b6a3922b82ffa6cd563b.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="QyseV26">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [507]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/:id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-fe96cb8c821cfb411cf6.js",
    "/static/place/382-64dbd029f1469d363a43.js",
    "/static/place/main-cc506eaa517ad60709e3.js",
    "/static/place/handlers-Details-b25ca7bb5bb8893dbc88.js",
    "/static/place/AsyncComponent-c7814faa29177a38db1e.js",
  ]
CSS: [
    "/static/place/handlers-Details-c356fae1fa4d368326f6.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_itmq_4">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"nz"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [247,100]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-fe96cb8c821cfb411cf6.js",
    "/static/place/382-64dbd029f1469d363a43.js",
    "/static/place/main-cc506eaa517ad60709e3.js",
    "/static/place/handlers-Home-0ccb652c496afedfb250.js",
  ]
CSS: [
    "/static/place/handlers-Home-b6a3922b82ffa6cd563b.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="QyseV26">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"nz"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [507]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "runtime-fe96cb8c821cfb411cf6.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes build and serve should return details page 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-fe96cb8c821cfb411cf6.js",
  "/static/place/382-64dbd029f1469d363a43.js",
  "/static/place/main-cc506eaa517ad60709e3.js",
  "/static/place/handlers-Details-b25ca7bb5bb8893dbc88.js",
  "/static/place/AsyncComponent-c7814faa29177a38db1e.js",
]
CSS: [
  "/static/place/handlers-Details-c356fae1fa4d368326f6.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_itmq_4">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [247,100]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="_itmq_4">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes build and serve should return home page 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-fe96cb8c821cfb411cf6.js",
  "/static/place/382-64dbd029f1469d363a43.js",
  "/static/place/main-cc506eaa517ad60709e3.js",
  "/static/place/handlers-Home-0ccb652c496afedfb250.js",
]
CSS: [
  "/static/place/handlers-Home-b6a3922b82ffa6cd563b.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="QyseV26">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [507]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes start should render details page correctly 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors-node_modules_babel_runtime_helpers_esm_taggedTemplateLiteral_js-node_modules_loadable-067aea.js",
  "/main.js",
  "/handlers-Details.js",
  "/AsyncComponent.js",
]
CSS: [
  "/handlers-Details.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Details__root____itmq_4">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["handlers-Details","AsyncComponent"]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="Details__root____itmq_4">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes start should render home page correctly 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors-node_modules_babel_runtime_helpers_esm_taggedTemplateLiteral_js-node_modules_loadable-067aea.js",
  "/main.js",
  "/handlers-Home.js",
]
CSS: [
  "/handlers-Home.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Home__root___QyseV26">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["handlers-Home"]
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
